idf_component_register(SRCS "mb_airswitch001.c" 
                            "functions/mt_mbfunc_airswitch001.c" 
                            "port/portevent.c"
                            "port/portothers.c"
                            "port/portserial.c"
                            "port/porttimer.c"
                            "rtu/mbcrc.c"
                            "rtu/mbrtu.c"
                    INCLUDE_DIRS "include")
